Fixed the double free core dump by adding #define EIGEN_DONT_VECTORIZE 1 at the top of source code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,11 @@ project(cascaded_ground_seg)
 
 find_package(catkin REQUIRED COMPONENTS
   cv_bridge
-  roscpp
+  roscpp	
+  #pcl_ros
 )
 
-find_package(PCL 1.7 REQUIRED)
+find_package(PCL 1.8 REQUIRED)
 include_directories(${PCL_INCLUDE_DIRS})
 link_libraries(${PCL_LIBRARIES})
 add_definitions(${PCL_DEFINITIONS})
@@ -19,6 +20,7 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+#SET(CMAKE_CXX_FLAGS "-O0 -g -Wall ${CMAKE_CXX_FLAGS}")
 #SET(CMAKE_CXX_FLAGS "-std=c++11 -O2 -g -Wall ${CMAKE_CXX_FLAGS}")
 
 add_executable(${PROJECT_NAME}_node src/cascaded_ground_seg.cpp)
@@ -28,3 +30,20 @@ target_link_libraries(${PROJECT_NAME}_node
    ${PCL_LIBRARIES}
 )
 
+#(WORKS)
+
+#add_executable(example_graphcut "src/example_graphcut.cpp")
+#target_link_libraries(
+  #example_graphcut
+  ##${catkin_LIBRARIES}
+  #${PCL_LIBRARIES}
+#)
+
+#(SEGFAULT)
+
+#add_executable(example_graphcut "src/example_graphcut.cpp")
+#target_link_libraries(
+  #example_graphcut
+  #${catkin_LIBRARIES}
+  #${PCL_LIBRARIES}
+#)
